src/test/deca/context/invalid/expr_cast_Object_to_null.deca
// Test of the rule (3.39) : can't cast Object to null.

{
	null var1;
	Object var2;
	var1 = (null)(var2);
}

// Résultat :
//# a
